update docs for dynodocs

--- a/docs/1. Introduction.md
+++ b/docs/1. Introduction.md
@@ -29,7 +29,7 @@ npm install @rschedule/core @rschedule/standard-date-adapter
 
 ### Setup
 
-rSchedule supports multiple date libraries though a [`DateAdapter`](./date-adapter) interface. To get started, you need to import the date adapter for your chosen date library (see the [`DateAdapter`](./date-adapter) section for more information). _Note: you can only use one date adapter at a time in a project._
+rSchedule supports multiple date libraries though a [`DateAdapter`](./3.%20Date%20Adapter/1.%20Overview.md) interface. To get started, you need to import the date adapter for your chosen date library (see the [`DateAdapter`](./3.%20Date%20Adapter/1.%20Overview.md) section for more information). _Note: you can only use one date adapter at a time in a project._
 
 Create an `rschedule.ts` (or `rschedule.js`) file in your project which configures rSchedule locally. Instead of importing objects from `@rschedule/core`, you'll import them from this local file.
 
@@ -55,9 +55,9 @@ import { Schedule } from './rschedule';
 // ... do stuff
 ```
 
-## [Usage Overview](./usage)
+## [Usage Overview](./2.%20Usage/1.%20Overview.md)
 
-See [Usage Overview](./usage) for more info.
+See [Usage Overview](./2.%20Usage/1.%20Overview.md) for more info.
 
 ## Other javascript recurring date libraries I'm aware of
 
