--- a/docs/2. Usage/1. Overview.md
+++ b/docs/2. Usage/1. Overview.md
@@ -1,25 +1,25 @@
 # Using rSchedule
 
-**_This assumes you have followed the [setup instructions](../#setup)_**
+**_This assumes you have followed the [setup instructions](../1.%20Introduction.md#setup)_**
 
 This library has four main occurrence generating classes which each extend `OccurrenceGenerator`:
 
-- [Schedule](./schedule)
-- [Calendar](./calendar)
-- [Rule](./rule)
-- [Dates](./dates)
+- [Rule](./2.%20Rule.md)
+- [Dates](./3.%20Dates.md)
+- [Schedule](./4.%20Schedule.md)
+- [Calendar](./5.%20Calendar.md)
 
-If you plan on using rSchedule with the iCalendar spec, it also has a fifth `VEvent` object which replaces the `Schedule` object. [See the `@rschedule/ical-tools` docs for more info.](../serialization/ical)
+If you plan on using rSchedule with the iCalendar spec, it also has a fifth `VEvent` object which replaces the `Schedule` object. [See the `@rschedule/ical-tools` docs for more info.](../4.%20Serialization/3.%20ICAL.md)
 
-- [VEvent](../serialization/ical)
+- [VEvent](../4.%20Serialization/3.%20ICAL.md)
 
-Finally, this library has an assortment of [occurrence stream operators](./operators) which allow combining multiple occurrence generators in various ways. Usage of the occurrence stream operators is heavily inspired by rxjs pipe operators. See [`occurrence stream operators`](./operators) for more information.
+Finally, this library has an assortment of [occurrence stream operators](./6.%20Operators.md) which allow combining multiple occurrence generators in various ways. Usage of the occurrence stream operators is heavily inspired by rxjs pipe operators. See [`occurrence stream operators`](./6.%20Operators.md) for more information.
 
-There is also an optional `@rschedule/rule-tools` library which contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up immutable rSchedule objects. [See the `rule-tools` docs for more information.](./rule-tools)
+There is also an optional `@rschedule/rule-tools` library which contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up immutable rSchedule objects. [See the `rule-tools` docs for more information.](./7.%20Rule%20Tools.md)
 
 ### Overview
 
-If you're not serializing to iCalendar, your primary tool will be the friendly [`Schedule`](./schedule) object. It can be used to build an occurrence schedule from an arbitrary number of inclusion rules, exclusion rules, inclusion dates, and exclusion dates.
+If you're not serializing to iCalendar, your primary tool will be the friendly [`Schedule`](./4.%20Schedule.md) object. It can be used to build an occurrence schedule from an arbitrary number of inclusion rules, exclusion rules, inclusion dates, and exclusion dates.
 
 Example usage:
 
@@ -44,9 +44,9 @@ const schedule = new Schedule({
 schedule.occurrences().toArray();
 ```
 
-Each [`Schedule`](./schedule) object is intended to contain all the recurrence information to iterate through a single event, while following an API inspired by the ICAL spec. As such, duplicate occurrences are filtered out.
+Each [`Schedule`](./4.%20Schedule.md) object is intended to contain all the recurrence information to iterate through a single event, while following an API inspired by the ICAL spec. As such, duplicate occurrences are filtered out.
 
-To iterate over a collection of schedules, e.g. for displaying on a calendar, you can use the [`Calendar`](./calendar) object. The Calendar object combines a collection of occurrence generators into a single iterable object (i.e. it displays the `union` of all the given occurrence generators).
+To iterate over a collection of schedules, e.g. for displaying on a calendar, you can use the [`Calendar`](./5.%20Calendar.md) object. The Calendar object combines a collection of occurrence generators into a single iterable object (i.e. it displays the `union` of all the given occurrence generators).
 
 Example usage:
 
@@ -63,7 +63,7 @@ for (const { date } of calendar.occurrences({ start: new Date() })) {
 }
 ```
 
-Additionally, the [`Dates`](./dates) object provides an `OccurrenceGenerator` wrapper over a collection of arbitrary dates.
+Additionally, the [`Dates`](./3.%20Dates.md) object provides an `OccurrenceGenerator` wrapper over a collection of arbitrary dates.
 
 Example usage:
 
@@ -79,7 +79,7 @@ for (const { date } of dates.occurrences({ start: new Date(2000, 5) })) {
 }
 ```
 
-For more complex scenerios, rSchedule offers a set of [occurrence stream operator](./operators) functions which allow combining and manipulating a stream of occurrences. Usage is inspired the rxjs pipe operators.
+For more complex scenerios, rSchedule offers a set of [occurrence stream operator](./6.%20Operators.md) functions which allow combining and manipulating a stream of occurrences. Usage is inspired the rxjs pipe operators.
 
 Example usage:
 
@@ -102,13 +102,13 @@ new Calendar().pipe(
 
 Internally, some rSchedule objects rely on occurrence stream operators to handle their recurrence logic (e.g. `Schedule`).
 
-Finally, there are [`Rule` objects](./rule) which process recurrence rules. You probably won't need to use `Rule` object's directy though, instead making use of `Schedule` objects.
+Finally, there are [`Rule` objects](./2.%20Rule.md) which process recurrence rules. You probably won't need to use `Rule` object's directy though, instead making use of `Schedule` objects.
 
 ### CRUD with rSchedule objects
 
 All of rSchedule's objects are immutable (the major exception is the `data` property that many of the occurrence generators have). This decision _greatly_ simplifies the implementation (reducing the number of bugs) and helps to optimize the performance of rSchedule objects for reading. The downside is that this can make updating the objects a bit strange and clumsy compared to typical mutable javascript APIs. While each rSchedule object is different, this section provides a brief introduction on how to change rSchedule objects.
 
-As a reminder, you can check out the optional [`rule-tools` package](./rule-tools) that aims to provide convenient helper functions that simplify common tasks.
+As a reminder, you can check out the optional [`rule-tools` package](./7.%20Rule%20Tools.md) that aims to provide convenient helper functions that simplify common tasks.
 
 #### Example: adding an rrule to a schedule
 
