--- a/docs/2. Usage/2. Rule.md
+++ b/docs/2. Usage/2. Rule.md
@@ -1,12 +1,12 @@
 # Rule class
 
-[**`Rule implements IOccurrenceGenerator`**](../#ioccurrencegenerator-interface)
+[**`Rule implements IOccurrenceGenerator`**](./1.%20Overview.md#occurrencegenerator-interface)
 
 `Rule` objects process recurrence rules. rSchedule is modular, so it is possible to pick and choose which recurrence rules are included, as well as create custom recurrence rules. If you're using the standard setup for rSchedule (e.g. `import '@rschedule/standard-date-adapter/setup'` or `import '@rschedule/moment-date-adapter/setup`) then all of the available [iCAL spec](https://tools.ietf.org/html/rfc5545) recurrence rules have been added for you.
 
 The following describes the ICAL recurrence rules which rSchedule has. Note, rSchedule currently doesn't provide recurrence rules for all iCal rules. `BYWEEKNO`, `BYYEARDAY`, and `BYSETPOS` are unsupported. If you're not familiar, you can read the [recurrence rule section of the ICAL spec](https://tools.ietf.org/html/rfc5545#section-3.3.10) to really familiarize yourself with the concepts (its not long).
 
-There is also an optional `@rschedule/rule-tools` library which contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up the immutable rSchedule objects. [See the `rule-tools` docs for more information.](../rule-tools)
+There is also an optional `@rschedule/rule-tools` library which contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up the immutable rSchedule objects. [See the `rule-tools` docs for more information.](./7.%20Rule%20Tools.md)
 
 Rule objects support:
 
