--- a/docs/2. Usage/3. Dates.md
+++ b/docs/2. Usage/3. Dates.md
@@ -1,6 +1,6 @@
 # Dates class
 
-[**`Dates extends OccurrenceGenerator`**](../#occurrencegenerator-interface)
+[**`Dates extends OccurrenceGenerator`**](./1.%20Overview.md#occurrencegenerator-interface)
 
 The `Dates` class provides a `OccurrenceGenerator` wrapper for an array of dates. As with other rSchedule objects, `Dates` is immutable.
 
