--- a/docs/2. Usage/4. Schedule.md
+++ b/docs/2. Usage/4. Schedule.md
@@ -1,8 +1,10 @@
 # Schedule class
 
-**Schedule extends [OccurrenceGenerator](../#occurrencegenerator-interface);**
+**Schedule extends [OccurrenceGenerator](./1.%20Overview.md#occurrencegenerator-interface);**
 
 `Schedule` objects allow iterating an occurrence schedule made up of RRULE, EXRULE, RDATE, and EXDATE components. Each `Schedule` object is intended to contain all the recurrence information to iterate through a single event, while following an API inspired by the ICAL spec. As such, duplicate occurrences are filtered out. As with other rSchedule objects, `Schedule` is immutable.
+
+When constructing a `Schedule`, you will likely be providing recurrence rules in the form of either a `Rule` instance or an option's object for constructing a `Rule` instance. See the [`Rule` docs](./2.%20Rule.md) for more information about the various `Rule` options.
 
 Example usage:
 
@@ -47,7 +49,7 @@ else if (schedule.occursBefore(new Date(2012,2,12)))) {
 }
 ```
 
-There is also an optional `@rschedule/rule-tools` library which contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up rSchedule objects. [See the `rule-tools` docs for more information.](../rule-tools)
+There is also an optional `@rschedule/rule-tools` library which contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up rSchedule objects. [See the `rule-tools` docs for more information.](./7.%20Rule%20Tools.md)
 
 ### Constructor
 
