--- a/docs/2. Usage/5. Calendar.md
+++ b/docs/2. Usage/5. Calendar.md
@@ -1,10 +1,10 @@
 # Calendar class
 
-[**`Calendar implements OccurrenceGenerator`**](../#occurrencegenerator-interface)
+[**`Calendar implements OccurrenceGenerator`**](./1.%20Overview.md#occurrencegenerator-interface)
 
-While [`Schedule`](../schedule) objects are intended to represent the schedule of a single event, `Calendar` objects are intended to represent a group (calendar) of events. `Calendar` objects support iterating through _the union_ of a group of [`OccurrenceGenerator`](../#occurrencegenerator-interface) objects. As with other rSchedule objects, `Calendar` is immutable.
+While [`Schedule`](./4.%20Schedule.md) objects are intended to represent the schedule of a single event, `Calendar` objects are intended to represent a group (calendar) of events. `Calendar` objects support iterating through _the union_ of a group of [`OccurrenceGenerator`](./1.%20Overview.md#occurrencegenerator-interface) objects. As with other rSchedule objects, `Calendar` is immutable.
 
-Unlike `Schedule` or `Rule` objects, Calendar objects allow multiple occurrences happening at the same time (each associated with a different occurrence generator). Because `Calendar` objects are constructed from objects which implement the [`OccurrenceGenerator` interface](../#shared-interfaces), you can construct calendars out of other `Calendars`, out of `Schedules`, `Rules`, etc.
+Unlike `Schedule` or `Rule` objects, Calendar objects allow multiple occurrences happening at the same time (each associated with a different occurrence generator). Because `Calendar` objects are constructed from objects which implement the [`OccurrenceGenerator` interface](./1.%20Overview.md#occurrencegenerator-interface), you can construct calendars out of other `Calendars`, out of `Schedules`, `Rules`, etc.
 
 Example:
 
