--- a/docs/2. Usage/7. Rule Tools.md
+++ b/docs/2. Usage/7. Rule Tools.md
@@ -2,7 +2,7 @@
 
 [![NPM version](https://flat.badgen.net/npm/v/@rschedule/rule-tools)](https://www.npmjs.com/package/@rschedule/rule-tools) [![Size when minified & gzipped](https://flat.badgen.net/bundlephobia/minzip/@rschedule/rule-tools)](https://bundlephobia.com/result?p=@rschedule/rule-tools)
 
-The optional package `@rschedule/rule-tools` contains utility functions for manipulating rSchedule `Rule` and `Schedule` objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up immutable rSchedule objects.
+The optional package `@rschedule/rule-tools` contains utility functions for manipulating rSchedule [`Rule`](./2.%20Rule.md) and [`Schedule`](./4.%20Schedule.md) objects and working with common recurrence rule patterns. Even if you don't use it, it can provide a useful example of how to manipulate and build up immutable rSchedule objects.
 
 Example:
 
