--- a/docs/3. Date Adapter/1. Overview.md
+++ b/docs/3. Date Adapter/1. Overview.md
@@ -2,18 +2,18 @@
 
 rSchedule is date library agnostic. It needs a `DateAdapter` constructor to process dates. A selection of DateAdapters already exist. Additionally, it should be pretty easy for you to create your own date adapter for whatever date library you wish. As with other rSchedule objects, date adapters are immutable.
 
-- [StandardDateAdapter](./standard-date-adapter)
+- [StandardDateAdapter](./2.%20Standard%20Date%20Adapter.md)
   - For use with the standard javascript `Date` object. Supports local and UTC timezones.
-- [MomentDateAdapter](./moment-date-adapter)
+- [MomentDateAdapter](./3.%20Moment%20Date%20Adapter.md)
   - For use with moment `Moment` objects. Supports local and UTC timezones.
-- [MomentTZDateAdapter](./moment-tz-date-adapter)
+- [MomentTZDateAdapter](./4.%20Moment%20TZ%20Date%20Adapter.md)
   - For use with moment-timezone `Moment` objects. Has full timezone support.
-- [LuxonDateAdapter](./luxon-date-adapter)
+- [LuxonDateAdapter](./5.%20Luxon%20Date%20Adapter.md)
   - For use with luxon `DateTime` objects. Has full timezone support.
-- [DayjsDateAdapter](./dayjs-date-adapter)
-  - For use with dayjs `Dayjs` objects. Supports local and UTC timezones.
-- [JodaDateAdapter](./joda-date-adapter)
+- [JodaDateAdapter](./6.%20Joda%20Date%20Adapter.md)
   - For use with js-joda `ZonedDateTime` objects. Has full timezone support.
+- [DayjsDateAdapter](./7.%20Dayjs%20Date%20Adapter.md)
+  - For use with dayjs `Dayjs` objects. Supports local and UTC timezones.
 
 ### Standard Setup
 
@@ -54,7 +54,7 @@ If you wish to handle setup yourself (e.g. in order to customize which recurrenc
 
 ### The `generators` property
 
-Each DateAdapter has a `generators` property which contains an array of the rSchedule objects which are responsible for generating that particular date. For example, when iterating through a `Schedule` containing two `Rule` objects, each yielded DateAdapter will have a `generators` property with a length two array. The first element will be the `Rule` object which generated the date, the second element will be the `Schedule` object which generated the date. The `DateAdapter#generators` property pairs with the `data` property found on `Schedule`, `Calendar`, `Rule`, and `Dates` objects. This allows you to attach data to a `Rule` or `Schedule`, and access that data from the yielded dates.
+Each DateAdapter has a `generators` property which contains an array of the rSchedule objects which are responsible for generating that particular date. For example, when iterating through a [`Schedule`](../2.%20Usage/4.%20Schedule.md) containing two [`Rule`](../2.%20Usage/2.%20Rule.md) objects, each yielded DateAdapter will have a `generators` property with a length two array. The first element will be the `Rule` object which generated the date, the second element will be the `Schedule` object which generated the date. The `DateAdapter#generators` property pairs with the `data` property found on `Schedule`, [`Calendar`](../2.%20Usage/5.%20Calendar.md), `Rule`, and [`Dates`](../2.%20Usage/3.%20Dates.md) objects. This allows you to attach data to a `Rule` or `Schedule`, and access that data from the yielded dates.
 
 Example:
 
