--- a/docs/3. Date Adapter/2. Standard Date Adapter.md
+++ b/docs/3. Date Adapter/2. Standard Date Adapter.md
@@ -2,7 +2,7 @@
 
 [![NPM version](https://flat.badgen.net/npm/v/@rschedule/standard-date-adapter)](https://www.npmjs.com/package/@rschedule/standard-date-adapter) [![Size when minified & gzipped](https://flat.badgen.net/bundlephobia/minzip/@rschedule/standard-date-adapter)](https://bundlephobia.com/result?p=@rschedule/standard-date-adapter)
 
-**[`StandardDateAdapter extends DateAdapterBase`](../#dateadapterbase)**
+**[`StandardDateAdapter extends DateAdapterBase`](./1.%20Overview.md#dateadapterbase)**
 
 rSchedule DateAdapter for working with standard javascript `Date` objects. Only supports local and UTC timezones.
 
