--- a/docs/3. Date Adapter/3. Moment Date Adapter.md
+++ b/docs/3. Date Adapter/3. Moment Date Adapter.md
@@ -2,7 +2,7 @@
 
 [![NPM version](https://flat.badgen.net/npm/v/@rschedule/moment-date-adapter)](https://www.npmjs.com/package/@rschedule/moment-date-adapter) [![Size when minified & gzipped](https://flat.badgen.net/bundlephobia/minzip/@rschedule/moment-date-adapter)](https://bundlephobia.com/result?p=@rschedule/moment-date-adapter)
 
-**[`MomentDateAdapter extends DateAdapterBase`](../#dateadapterbase)**
+**[`MomentDateAdapter extends DateAdapterBase`](./1.%20Overview.md#dateadapterbase)**
 
 rSchedule DateAdapter for working with [moment](https://momentjs.com) `Moment` objects. Only supports local and UTC timezones. For full timezone support, you need to use the [`MomentTZDateAdapter`](./moment-tz-date-adapter) (along with [`moment-timezone`](https://momentjs.com/timezone/)).
 
