--- a/docs/3. Date Adapter/5. Luxon Date Adapter.md
+++ b/docs/3. Date Adapter/5. Luxon Date Adapter.md
@@ -2,7 +2,7 @@
 
 [![NPM version](https://flat.badgen.net/npm/v/@rschedule/luxon-date-adapter)](https://www.npmjs.com/package/@rschedule/luxon-date-adapter) [![Size when minified & gzipped](https://flat.badgen.net/bundlephobia/minzip/@rschedule/luxon-date-adapter)](https://www.npmjs.com/package/@rschedule/luxon-date-adapter)
 
-**[`LuxonDateAdapter extends DateAdapterBase`](../#dateadapterbase)**
+**[`LuxonDateAdapter extends DateAdapterBase`](./1.%20Overview.md#dateadapterbase)**
 
 rSchedule DateAdapter for working with [luxon](https://moment.github.io/luxon/) `DateTime` objects. Has full timezone support.
 
