--- a/docs/3. Date Adapter/7. Dayjs Date Adapter.md
+++ b/docs/3. Date Adapter/7. Dayjs Date Adapter.md
@@ -2,7 +2,7 @@
 
 [![NPM version](https://flat.badgen.net/npm/v/@rschedule/dayjs-date-adapter)](https://www.npmjs.com/package/@rschedule/dayjs-date-adapter) [![Size when minified & gzipped](https://flat.badgen.net/bundlephobia/minzip/@rschedule/dayjs-date-adapter)](https://bundlephobia.com/result?p=@rschedule/dayjs-date-adapter)
 
-**[`DayjsDateAdapter extends DateAdapterBase`](../#dateadapterbase)**
+**[`DayjsDateAdapter extends DateAdapterBase`](./1.%20Overview.md#dateadapterbase)**
 
 rSchedule DateAdapter for working with [dayjs](https://dayjsjs.com) objects. This package also requires the dayjs ["UTC" plugin](https://day.js.org/docs/en/plugin/utc). Dayjs must be extended using this plugin _before_ the `DayjsDateAdapter` is loaded. Only supports local and UTC timezones.
 
