--- a/docs/4. Serialization/2. JSON.md
+++ b/docs/4. Serialization/2. JSON.md
@@ -106,5 +106,5 @@ const dataParser = (json: OccurrenceGenerator.JSON) => {
   }
 }
 
-const schedule: Schedule<{ name: string }> = Schedule.fromJSON<{ name: string }>(jsonSchedule, { data: dataParser });
+const schedule: Schedule<{ name: string }> = OccurrenceGenerator.fromJSON<{ name: string }>(jsonSchedule, { data: dataParser });
 ```
