--- a/docs/3. Date Adapter/6. Joda Date Adapter.md
+++ b/docs/3. Date Adapter/6. Joda Date Adapter.md
@@ -2,7 +2,7 @@
 
 [![NPM version](https://flat.badgen.net/npm/v/@rschedule/joda-date-adapter)](https://www.npmjs.com/package/@rschedule/joda-date-adapter) [![Size when minified & gzipped](https://flat.badgen.net/bundlephobia/minzip/@rschedule/joda-date-adapter)](https://www.npmjs.com/package/@rschedule/joda-date-adapter)
 
-**[`JodaDateAdapter extends DateAdapterBase`](../#dateadapterbase)**
+**[`JodaDateAdapter extends DateAdapterBase`](./1.%20Overview.md#dateadapterbase)**
 
 rSchedule DateAdapter for working with [js-joda](https://github.com/js-joda/js-joda) `ZonedDateTime` objects. Supports time zones via the `@js-joda/timezone` package. Without the optional `@js-joda/timezone` package, `JodaDateAdapter` supports the "UTC" and "SYSTEM" (local) time zones.
 
