--- a/docs/4. Serialization/1. Overview.md
+++ b/docs/4. Serialization/1. Overview.md
@@ -2,8 +2,8 @@
 
 Two optional packages exist for handling serializing / deserializing rSchedule objects.
 
-- For [iCal support](https://tools.ietf.org/html/rfc5545), use the [optional `ical-tools` package](./ical).
+- For [iCal support](https://tools.ietf.org/html/rfc5545), use the [optional `ical-tools` package](./3.%20ICAL.md).
 
-- For standard json support, use the [optional `json-tools` package](./json).
+- For standard json support, use the [optional `json-tools` package](./2.%20JSON.md).
 
 The `json-tools` package is much smaller than the `ical-tools` package and it also supports serializing all `OccurrenceGenerator` objects (unlike `ical-tools`), so it should be your default choice.
