feat: support luxon v1 and v2 fixes #64

--- a/docs/3. Date Adapter/5. Luxon Date Adapter.md
+++ b/docs/3. Date Adapter/5. Luxon Date Adapter.md
@@ -18,8 +18,42 @@ npm install @rschedule/luxon-date-adapter
 
 ## Usage
 
-Configure as date adapter with:
+`@rschedule/luxon-date-adapter` supports both Luxon v1.x and v2.x.
+
+To use Luxon v1, configure as date adapter with:
+
+```typescript
+import '@rschedule/luxon-date-adapter/v1/setup';
+```
+
+and import the date adapter via
+
+```ts
+import { LuxonDateAdapter } from '@rschedule/luxon-date-adapter/v1';
+```
+
+To use Luxon v2, configure the date adapter with
+
+```typescript
+import '@rschedule/luxon-date-adapter/v2/setup';
+```
+
+and import the date adapter via
+
+```ts
+import { LuxonDateAdapter } from '@rschedule/luxon-date-adapter/v2';
+```
+
+For historical compatibility, you can import the v1 date adapter via
 
 ```typescript
 import '@rschedule/luxon-date-adapter/setup';
 ```
+
+and import the date adapter via
+
+```ts
+import { LuxonDateAdapter } from '@rschedule/luxon-date-adapter';
+```
+
+These non-versioned entry points are deprecated and will be removed in the next major release. You should update your app to use either the `v1` or `v2` entry points.
