fix(docs): typo

--- a/docs/4. Serialization/3. ICAL.md
+++ b/docs/4. Serialization/3. ICAL.md
@@ -21,7 +21,7 @@ const vEvent = new VEvent({
 
 const iCal = vEvent.toICal(); // => string
 
-vEvent.fromICal(iCal); // => VEvent[]
+VEvent.fromICal(iCal); // => VEvent[]
 ```
 
 ## Installation
