Add Luxon time zone warning

--- a/docs/3. Date Adapter/1. Overview.md
+++ b/docs/3. Date Adapter/1. Overview.md
@@ -3,15 +3,20 @@
 rSchedule is date library agnostic. It needs a `DateAdapter` constructor to process dates. A selection of DateAdapters already exist. Additionally, it should be pretty easy for you to create your own date adapter for whatever date library you wish. As with other rSchedule objects, date adapters are immutable.
 
 - [StandardDateAdapter](./2.%20Standard%20Date%20Adapter.md)
-  - For use with the standard javascript `Date` object. Supports local and UTC timezones.
+  - For use with the standard javascript `Date` object.
+  - Supports local and UTC timezones.
 - [MomentDateAdapter](./3.%20Moment%20Date%20Adapter.md)
-  - For use with moment `Moment` objects. Supports local and UTC timezones.
+  - For use with moment `Moment` objects.
+  - Supports local and UTC timezones.
 - [MomentTZDateAdapter](./4.%20Moment%20TZ%20Date%20Adapter.md)
-  - For use with moment-timezone `Moment` objects. Has full timezone support.
+  - For use with moment-timezone `Moment` objects.
+  - Has full timezone support.
 - [LuxonDateAdapter](./5.%20Luxon%20Date%20Adapter.md)
-  - For use with luxon `DateTime` objects. Has full timezone support.
+  - For use with luxon `DateTime` objects.
+  - Has _flawed_ timezone support. Luxon has known, accepted, inconsistent behavior around time zone daylight savings time changes (see [this issue](https://github.com/moment/luxon/issues/1089) in the Luxon repo for more info). If you are using Luxon with different time zones and only displaying results in the client, it's probably fine. If you plan on serializing dates from different time zones, consider a different date library. See [this issue](https://gitlab.com/john.carroll.p/rschedule/-/issues/66) in the rSchedule repo for more info.
 - [JodaDateAdapter](./6.%20Joda%20Date%20Adapter.md)
-  - For use with js-joda `ZonedDateTime` objects. Has full timezone support.
+  - For use with js-joda `ZonedDateTime` objects.
+  - Has full timezone support.
 - [DayjsDateAdapter](./7.%20Dayjs%20Date%20Adapter.md)
   - For use with dayjs `Dayjs` objects. Supports local and UTC timezones.
 
