--- a/docs/3. Date Adapter/5. Luxon Date Adapter.md
+++ b/docs/3. Date Adapter/5. Luxon Date Adapter.md
@@ -4,7 +4,7 @@
 
 **[`LuxonDateAdapter extends DateAdapterBase`](./1.%20Overview.md#dateadapterbase)**
 
-rSchedule DateAdapter for working with [luxon](https://moment.github.io/luxon/) `DateTime` objects. Has full timezone support.
+rSchedule DateAdapter for working with [luxon](https://moment.github.io/luxon/) `DateTime` objects. It has _flawed_ timezone support: Luxon has known, accepted, inconsistent behavior around time zone daylight savings time changes (see [this issue](https://github.com/moment/luxon/issues/1089) in the Luxon repo for more info). If you are using Luxon with different time zones and only displaying results in the client, it's probably fine. If you plan on serializing dates from different time zones, consider a different date library. See [this issue](https://gitlab.com/john.carroll.p/rschedule/-/issues/66) in the rSchedule repo for more info. If you need to use Luxon and you need ICAL spec compliant time zone behavior, you can create a custom date adapter that accepts Luxon `DateTime` objects as input and outputs Luxon `DateTime` objects but which delegates to a different date library under the hood (e.g. `moment-timezone` or `js-joda`) for accurate time zone behavior (see [this issue](https://gitlab.com/john.carroll.p/rschedule/-/issues/66#note_751765330) for more information as well as an example implementation).
 
 ## Installation
 
