Fix(ical-tools): "date" value parsing

--- a/docs/4. Serialization/3. ICAL.md
+++ b/docs/4. Serialization/3. ICAL.md
@@ -61,6 +61,28 @@ vEvent
 vEvent.toICal(); // `DTSTART:20120524T000000Z\nRRULE:FREQ=WEEKLY;UNTIL=20121131T000000Z`
 ```
 
+### How to work with `"VALUE=DATE"`
+
+By default, creating a VEvent using the class constructor and then serializing that VEvent to ICal will result in the VEvent dates being serialized as ICal `"DATE-TIME"` values rather than `"DATE"` values. If you'd like to pass a date to VEvent and have it serialized as an ICal `"VALUE=DATE"` rather than `"VALUE=DATE-TIME"`, then you need to create that date using the DateAdapter constructor like so.
+
+Example:
+
+```ts
+const date = new StandardDateAdapter(new Date(), {
+  metadata: {
+    '@rschedule/ical-tools': {
+      isICalType: 'date',
+    },
+  },
+});
+
+const vEvent = new VEvent({
+  start: date,
+});
+```
+
+If you are creating the VEvent object from ICal (i.e. `VEvent.fromICal(icalString)`) than this is done for you automatically.
+
 ### Constructor
 
 `VEvent` has the following constructor.
