Docs: note which operators ignore duration.

--- a/docs/2. Usage/6. Operators.md
+++ b/docs/2. Usage/6. Operators.md
@@ -41,7 +41,7 @@ schedule.occurrences({ take: 5 }).toArray(); // occurrences;
 
 #### Add
 
-An operator function which accepts a spread of occurrence generators and adds their occurrences to the output.
+An operator function which accepts a spread of occurrence generators and adds their occurrences to the output. This operator ignores duration.
 
 Example:
 
@@ -51,7 +51,7 @@ new Calendar().pipe(add(scheduleOne, scheduleTwo));
 
 #### Subtract
 
-An operator function which accepts a spread of occurrence generators and removes their occurrences from the output.
+An operator function which accepts a spread of occurrence generators and removes their occurrences from the output. This operator ignores duration.
 
 Example:
 
@@ -61,7 +61,7 @@ scheduleOne.pipe(subtract(scheduleTwo));
 
 #### Intersection
 
-An operator function which takes a spread of occurrence generators and only returns the dates which intersect every occurrence generator.
+An operator function which takes a spread of occurrence generators and only returns the dates which intersect every occurrence generator. This operator ignores duration.
 
 Because it's possible for all the generators to never intersect, and because the intersection operator can't detect this lack of intersection, you must call `intersection()` with a `{maxFailedIterations: number}` argument if it is built from occurrence generators of infinite length. For convenience, you can globally set `IntersectionOperator.defaultMaxFailedIterations`.
 
@@ -85,7 +85,7 @@ scheduleOne.pipe(
 
 #### Unique
 
-An operator function which removes duplicate dates from the occurrence stream.
+An operator function which removes duplicate dates from the occurrence stream. This operator ignores duration.
 
 Example:
 
